memories page added

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     
-    <!-- Fonts-End -->
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@400;500;600&display=swap" rel="stylesheet"><!-- Fonts-End -->
     <title>React App</title>
   </head>
   <body style="margin: 0;">
