--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@400;500;600&display=swap" rel="stylesheet"><!-- Fonts-End -->
+
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
   <body style="margin: 0;">
